# Poster_Flask

./: .gitignore  README.md  app.py  config.py  main.py  models.py  pyproject.toml  setting.py  settings.py
about/: main.py  urls.py  views.py
about/templates/about/: author.html  tech.html
admin/: admin.py  mixins.py
core/: forms.py  main.py  urls.py  views.py
core/templates/core/: 403.html  404.html  500.html
migrations/versions/: 17eaa506ef41_.py  3286ccaeee75_ðpost_group_user_comment.py  38c1bba14aff_test_slug_back.py  49cbf12343b3_test_slug.py
posts/: database.py  forms.py  models.py  urls.py  utils.py  views.py
posts/templates/posts/: index.html  list_of_groups.html  show_post.html
templates/: base.html  creation.html  feedback.html  group_list.html  index.html  list_of_groups.html  post_confirm_delete.html  profile.html  show_post.html
templates/includes/: custom_paginator.html  footer.html  form.html  fullpost.html  head.html  header.html  switcher.html
templates/security/: _messages.html  login_user.html
users/: urls.py  views.py
users/templates/users/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  signup.html
